--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,8 @@
           "options": {
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
+            "assets": [ 
+              "src/favicon.ico", "src/assets", 
               {
                 "glob": "**/*",
                 "input": "public"
