--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.2",
     "@swimlane/ngx-charts": "^23.0.0-alpha.0",
+    "angular-cli-ghpages": "^2.0.3",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
